--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "socket.io-client": "^4.7.5",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1",
+    "xml-js": "^1.6.11",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
